--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -16,6 +16,29 @@
     .masthead {
         position: relative;
     }
+
+    /* Ensure footer has proper positioning for flock animation */
+    .page__footer {
+        position: relative !important;
+        overflow: hidden;
+    }
+
+    #flock-animation {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 0;
+        pointer-events: none;
+    }
+
+    /* Ensure footer content appears above the animation */
+    .page__footer-follow,
+    .page__footer-copyright {
+        position: relative;
+        z-index: 5;
+    }
 </style>
 
 <script>
