--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -31,3 +31,20 @@
 a.site-title {
     font-family: -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif !important;
 }
+
+
+/* Make X (Twitter) icon black */
+.fab.fa-x-twitter {
+    color: #000000 !important;
+}
+
+/* Make Facebook icon blue */
+.fab.fa-facebook {
+    color: #1877f2 !important;
+}
+
+/* Make Instagram icon purple */
+.fab.fa-instagram {
+    color: #962fbf !important;
+}
+
