Move favicon to assets

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -3,10 +3,10 @@
 <!-- https://www.janmeppe.com/blog/personal-blog-minimal-mistakes/ -->
 <!-- https://github.com/mmistakes/minimal-mistakes/issues/949 -->
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
-<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-<link rel="shortcut icon" href="/favicon.ico" />
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-<link rel="manifest" href="/site.webmanifest" />
+<link rel="icon" type="image/png" href="/assets/favicon/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon.svg" />
+<link rel="shortcut icon" href="/assets/favicon/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png" />
+<link rel="manifest" href="/assets/favicon/site.webmanifest" />
 
 <link rel="preload" href="/assets/fonts/Soopafresh-Regular.ttf" as="font" type="font/ttf" crossorigin="anonymous">
