--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,7 +31,7 @@
 <div class="page__footer-copyright">&copy; {% assign site_time = site.time | date: '%Y' %}{% if site.footer.since and
   site_time != site.footer.since %}{{ site.footer.since }} - {% endif %}{{ site_time }} <a
     href="{{ site.copyright_url | default: site.url }}">{{ site.copyright | default: site.title | escape_once | strip
-    }}: colemanyu.net</a> [<a href="https://github.com/colemanyu/colemanyu.github.io" rel="nofollow">GitHub</a>]. {{
+    }}: colemanyu.github.io</a> [<a href="https://github.com/colemanyu/colemanyu.github.io" rel="nofollow">GitHub</a>]. {{
   site.data.ui-text[site.locale].powered_by | default: "Powered by" }} <a href="https://jekyllrb.com"
     rel="nofollow">Jekyll</a> &amp; <a href="https://mademistakes.com/work/jekyll-themes/minimal-mistakes/"
     rel="nofollow">Minimal Mistakes</a>.</div>
