Change to wa sound

--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -37,7 +37,8 @@
 
             // Add the WAV source
             var source = document.createElement('source');
-            source.src = '/assets/audios/file_example_WAV_1MG.wav';
+            // source.src = '/assets/audios/file_example_WAV_1MG.wav';
+            source.src = '/assets/audios/uhaaaa.wma.wmv';
             source.type = 'audio/wav';
             audio.appendChild(source);
 
