Change to correct wav format

--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -38,7 +38,7 @@
             // Add the WAV source
             var source = document.createElement('source');
             // source.src = '/assets/audios/file_example_WAV_1MG.wav';
-            source.src = '/assets/audios/uhaaaa.wma.wmv';
+            source.src = '/assets/audios/uhaaaa.wma.wav';
             source.type = 'audio/wav';
             audio.appendChild(source);
 
