--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -48,3 +48,35 @@ a.site-title {
     color: #962fbf !important;
 }
 
+/* Author avatar hover effect */
+.author__avatar {
+    position: relative;
+    display: inline-block;
+}
+
+.author__avatar a {
+    display: block;
+    position: relative;
+}
+
+.author__avatar-main,
+.author__avatar-hover {
+    width: 100%;
+    height: 100%;
+    transition: opacity 0.3s ease;
+}
+
+.author__avatar-hover {
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+}
+
+.author__avatar:hover .author__avatar-main {
+    opacity: 0;
+}
+
+.author__avatar:hover .author__avatar-hover {
+    opacity: 1;
+}
