Test favicon in google search result

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -9,4 +9,7 @@
 <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png" />
 <link rel="manifest" href="/assets/favicon/site.webmanifest" />
 
+<!-- https://developers.google.com/search/docs/appearance/favicon-in-search -->
+<link rel="icon" href="/assets/favicon/favicon.ico" type="image/x-icon" />
+
 <link rel="preload" href="/assets/fonts/Soopafresh-Regular.ttf" as="font" type="font/ttf" crossorigin="anonymous">
