Move personal interests to a new top-of-mind section and include it in the home layout

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,8 +4,7 @@ layout: archive
 
 {{ content }}
 
-I am now interested in Matrix Profile.
-I stopped playing kendo for a while. I hope to resume it soon for preparing my 4 dan exam.
+{% include top-of-mind.html %}
 
 <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
 
